# nccc-svn

branches/cyrix/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  config.h.in  configure  configure.in
branches/cyrix/config/: bootstrap
branches/cyrix/doc/dev/: errorcodes.txt
branches/cyrix/src/: Makefile  Makefile.am  Makefile.in
branches/cyrix/src/chprint/: Makefile.am  Makefile.in  irc.ini
branches/cyrix/src/core/: Makefile.am  Makefile.in  chprint.c  chprint.h  conf.c  conf.h  nccc.c
branches/cyrix/src/include/: Makefile.am  Makefile.in
tags/cyrix_beforeautotools/: CHANGELOG
tags/cyrix_beforeautotools/src/core/: chprint.c  chprint.h  config.c
tags/cyrix_beforeautotools/src/include/: snl.c  snl.h
trunk/: TODO
